--- a/css/comentarios.css
+++ b/css/comentarios.css
@@ -1,2 +1,10 @@
 /* Comentário
 sobre o código */
+
+/* ----- REDES SOCIAIS -----
+Email: pet.ads.ifsp@gmail.com
+Facebook: https://www.facebook.com/PETADSIFSP
+GitHub: https://github.com/petadsifsp
+Instagram: https://www.instagram.com/petadsifsp/
+Site: http://pet_ads.paginas.scl.ifsp.edu.br/
+YouTube: https://www.youtube.com/channel/UC92DC8TQL6KfxVS2mKemXiw */
